--- a/server/package.json
+++ b/server/package.json
@@ -13,22 +13,25 @@
     "axios": "^0.19.2",
     "best-require": "^1.1.4",
     "colors": "^1.4.0",
-    "debug": "^4.1.0",
+    "debug": "^4.1.1",
     "ioredis": "^4.14.1",
     "json-format": "^1.0.1",
-    "koa": "^2.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
     "koa-json": "^2.0.2",
-    "koa-logger": "^3.2.0",
+    "koa-jwt": "^3.6.0",
+    "koa-logger": "^3.2.1",
     "koa-onerror": "^4.1.0",
-    "koa-router": "^7.4.0",
+    "koa-router": "^8.0.6",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.1.4",
+    "koa-views": "^6.2.1",
     "koa2-cors": "^2.0.6",
+    "md5": "^2.2.1",
     "moment": "^2.24.0",
     "mysql2": "^2.1.0",
-    "pug": "^2.0.3",
+    "pug": "^2.0.4",
     "request-ip": "^2.1.3",
     "sequelize": "^5.21.3",
     "shortid": "^2.2.15",
@@ -36,7 +39,7 @@
     "yaml-hook": "^1.0.0"
   },
   "devDependencies": {
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.7"
+    "mocha": "^7.0.1",
+    "nodemon": "^2.0.2"
   }
 }
