--- a/fe/package.json
+++ b/fe/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@gavinning/http": "^0.1.2",
+    "axios": "^0.19.2",
     "core-js": "^3.4.4",
+    "store2": "^2.10.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
