--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "test": "mocha test/**/*.spec.js"
   },
   "dependencies": {
+    "@4a/asp": "^0.1.1",
     "app-root-dir": "^1.0.2",
     "axios": "^0.19.2",
     "best-require": "^1.1.4",
@@ -35,7 +36,6 @@
     "request-ip": "^2.1.3",
     "sequelize": "^5.21.3",
     "shortid": "^2.2.15",
-    "winston": "^3.2.1",
     "yaml-hook": "^1.0.0"
   },
   "devDependencies": {
