--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koa-template",
-  "version": "0.1.4",
+  "name": "user-manager",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node bin/www",
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@4a/asp": "^0.1.1",
+    "@koa/multer": "^3.0.0",
     "app-root-dir": "^1.0.2",
     "axios": "^0.19.2",
     "best-require": "^1.1.4",
     "colors": "^1.4.0",
     "debug": "^4.1.1",
+    "fs-extra": "^10.0.0",
     "ioredis": "^4.14.1",
     "json-format": "^1.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -26,11 +28,13 @@
     "koa-logger": "^3.2.1",
     "koa-onerror": "^4.1.0",
     "koa-router": "^8.0.6",
+    "koa-send": "^5.0.1",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "koa2-cors": "^2.0.6",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
+    "multer": "^1.4.2",
     "mysql2": "^2.1.0",
     "pug": "^2.0.4",
     "request-ip": "^2.1.3",
