--- a/fe/package.json
+++ b/fe/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@4a/env": "^3.0.0",
     "@gavinning/http": "^0.1.2",
     "axios": "^0.19.2",
     "core-js": "^3.4.4",
