--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node bin/www",
-    "dev": "NODE_ENV=dev DEBUG=demo:* nodemon bin/www",
-    "prd": "pm2 start bin/www",
+    "dev": "cross-env NODE_ENV=dev DEBUG=demo:* nodemon bin/www",
+    "prd": "cross-env NODE_ENV=production pm2 start bin/www -n lab",
+    "pm2": "./node_modules/.bin/pm2.cmd",
     "test": "mocha test/**/*.spec.js"
   },
   "dependencies": {
@@ -43,7 +44,9 @@
     "yaml-hook": "^1.0.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "mocha": "^7.0.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "pm2": "^5.1.0"
   }
 }
