--- a/fe/package.json
+++ b/fe/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "fe",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "@4a/env": "^3.0.0",
-    "@gavinning/http": "^0.1.2",
-    "axios": "^0.19.2",
-    "core-js": "^3.4.4",
-    "store2": "^2.10.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "@4a/http": "^0.3.1",
+    "store2": "^2.12.0",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.6.10"
+    "@vitejs/plugin-vue": "^1.2.4",
+    "@vue/compiler-sfc": "^3.0.5",
+    "pug": "^3.0.2",
+    "stylus": "^0.54.8",
+    "typescript": "^4.3.2",
+    "vite": "^2.4.1",
+    "vue-tsc": "^0.0.24"
   }
 }
